; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___add_cmdf_panel.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___add_cmdf_panel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_25__ = type { %struct.TYPE_23__* }
%struct.TYPE_23__ = type { %struct.TYPE_22__* }
%struct.TYPE_22__ = type { i32, %struct.TYPE_21__** }
%struct.TYPE_21__ = type { i64, i32, %struct.TYPE_21__** }
%struct.TYPE_24__ = type { %struct.TYPE_20__* }
%struct.TYPE_20__ = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@PANEL_CONFIG_SIDEPANEL_W = common dso_local global i32 0, align 4
@PANEL_MODE_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__add_cmdf_panel(%struct.TYPE_25__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_25__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_23__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_22__*, align 8
  %11 = alloca %struct.TYPE_21__*, align 8
  %12 = alloca %struct.TYPE_21__*, align 8
  %13 = alloca %struct.TYPE_24__*, align 8
  store %struct.TYPE_25__* %0, %struct.TYPE_25__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %14 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_23__*, %struct.TYPE_23__** %15, align 8
  store %struct.TYPE_23__* %16, %struct.TYPE_23__** %8, align 8
  %17 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %18 = call i32 @__check_panel_num(%struct.TYPE_25__* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %78

21:                                               ; preds = %3
  %22 = call i32 @r_cons_get_size(i32* %9)
  %23 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_23__*, %struct.TYPE_23__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_22__*, %struct.TYPE_22__** %26, align 8
  store %struct.TYPE_22__* %27, %struct.TYPE_22__** %10, align 8
  %28 = load %struct.TYPE_22__*, %struct.TYPE_22__** %10, align 8
  %29 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %28, i32 0, i32 1
  %30 = load %struct.TYPE_21__**, %struct.TYPE_21__*** %29, align 8
  %31 = load %struct.TYPE_22__*, %struct.TYPE_22__** %10, align 8
  %32 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = sub nsw i32 %33, 1
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds %struct.TYPE_21__*, %struct.TYPE_21__** %30, i64 %35
  %37 = load %struct.TYPE_21__*, %struct.TYPE_21__** %36, align 8
  store %struct.TYPE_21__* %37, %struct.TYPE_21__** %11, align 8
  %38 = load %struct.TYPE_21__*, %struct.TYPE_21__** %11, align 8
  %39 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %38, i32 0, i32 2
  %40 = load %struct.TYPE_21__**, %struct.TYPE_21__*** %39, align 8
  %41 = load %struct.TYPE_21__*, %struct.TYPE_21__** %11, align 8
  %42 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_21__*, %struct.TYPE_21__** %40, i64 %43
  %45 = load %struct.TYPE_21__*, %struct.TYPE_21__** %44, align 8
  store %struct.TYPE_21__* %45, %struct.TYPE_21__** %12, align 8
  %46 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %47 = call i32 @__adjust_side_panels(%struct.TYPE_25__* %46)
  %48 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %49 = load %struct.TYPE_21__*, %struct.TYPE_21__** %12, align 8
  %50 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @__insert_panel(%struct.TYPE_25__* %48, i32 0, i32 %51, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %53 = load %struct.TYPE_23__*, %struct.TYPE_23__** %8, align 8
  %54 = call %struct.TYPE_24__* @__get_panel(%struct.TYPE_23__* %53, i32 0)
  store %struct.TYPE_24__* %54, %struct.TYPE_24__** %13, align 8
  %55 = load %struct.TYPE_24__*, %struct.TYPE_24__** %13, align 8
  %56 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %55, i32 0, i32 0
  %57 = load %struct.TYPE_20__*, %struct.TYPE_20__** %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %57, i32 0, i32 0
  %59 = load i32, i32* @PANEL_CONFIG_SIDEPANEL_W, align 4
  %60 = load i32, i32* %9, align 4
  %61 = sub nsw i32 %60, 1
  %62 = call i32 @__set_geometry(i32* %58, i32 0, i32 1, i32 %59, i32 %61)
  %63 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %64 = load %struct.TYPE_24__*, %struct.TYPE_24__** %13, align 8
  %65 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %66 = load %struct.TYPE_24__*, %struct.TYPE_24__** %13, align 8
  %67 = load i8*, i8** %6, align 8
  %68 = load i8*, i8** %7, align 8
  %69 = call i32 @__load_cmdf(%struct.TYPE_25__* %65, %struct.TYPE_24__* %66, i8* %67, i8* %68)
  %70 = call i32 @__set_cmd_str_cache(%struct.TYPE_25__* %63, %struct.TYPE_24__* %64, i32 %69)
  %71 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %72 = call i32 @__set_curnode(%struct.TYPE_25__* %71, i32 0)
  %73 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %74 = call i32 @__set_refresh_all(%struct.TYPE_25__* %73, i32 0, i32 0)
  %75 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %76 = load i32, i32* @PANEL_MODE_DEFAULT, align 4
  %77 = call i32 @__set_mode(%struct.TYPE_25__* %75, i32 %76)
  store i32 0, i32* %4, align 4
  br label %78

78:                                               ; preds = %21, %20
  %79 = load i32, i32* %4, align 4
  ret i32 %79
}

declare dso_local i32 @__check_panel_num(%struct.TYPE_25__*) #1

declare dso_local i32 @r_cons_get_size(i32*) #1

declare dso_local i32 @__adjust_side_panels(%struct.TYPE_25__*) #1

declare dso_local i32 @__insert_panel(%struct.TYPE_25__*, i32, i32, i8*) #1

declare dso_local %struct.TYPE_24__* @__get_panel(%struct.TYPE_23__*, i32) #1

declare dso_local i32 @__set_geometry(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @__set_cmd_str_cache(%struct.TYPE_25__*, %struct.TYPE_24__*, i32) #1

declare dso_local i32 @__load_cmdf(%struct.TYPE_25__*, %struct.TYPE_24__*, i8*, i8*) #1

declare dso_local i32 @__set_curnode(%struct.TYPE_25__*, i32) #1

declare dso_local i32 @__set_refresh_all(%struct.TYPE_25__*, i32, i32) #1

declare dso_local i32 @__set_mode(%struct.TYPE_25__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
